# halver

./: README.md
api/: .dockerignore  .env.example  .gitignore  Dockerfile  dump.rdb  fly.toml  playgroundgeneral.py  pyproject.toml  setup.cfg
api/accounts/: adapters.py  admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
api/accounts/api/: serializers.py  views.py
api/accounts/migrations/: 0001_initial.py  0001_postgres_extensions.py  0002_initial.py  0002_remove_customuser_profile_image_and_more.py  0003_alter_customuser_email_alter_customuser_first_name_and_more.py  0003_alter_customuser_phone.py  0003_rename_uid_customuser_uuid.py  0004_alter_customuser_options.py  0004_alter_customuser_phone.py  0004_customuser_expo_push_token.py  0005_alter_customuser_expo_push_token.py  0005_alter_customuser_expo_push_token_and_more.py
api/accounts/tasks/: notifications.py
api/accounts/tests/: test_models.py
api/bills/: admin.py  apps.py  models.py  tasks.py  urls.py  utils.py
api/bills/api/: permissions.py  serializers.py  views copy.py  views.py
api/bills/migrations/: 0001_initial.py  0002_initial.py  0002_remove_action_bill_participant_and_more.py  0003_alter_billtransaction_contribution.py  0003_rename_due_date_bill_deadline.py  0004_billtransaction_participant_and_more.py  0004_rename_user_action_participant_and_more.py  0005_remove_transaction_refundable_alter_action_status.py  0005_rename_participant_billtransaction_paying_user_and_more.py  0006_action_paystack_plan_action_paystack_subscription_and_more.py  0006_billunregisteredparticipant_bills_billu_phone_d24dee_idx.py  0007_alter_billtransaction_transaction_type_and_more.py  0007_transaction.py  0008_alter_bill_created_alter_billaction_created_and_more.py  0008_remove_bill_bill_date_bill_first_charge_date_and_more.py  0009_alter_bill_first_charge_date.py  0009_alter_billaction_status.py  0010_alter_billarrear_status.py  0010_delete_transaction.py  0011_alter_billaction_status.py  0011_billtransaction.py  0012_rename_action_billaction.py  0013_remove_billaction_paystack_plan_and_more.py  0014_billaction_total_payment_due.py  0015_alter_bill_options_alter_billaction_options_and_more.py  0016_alter_billunregisteredparticipant_phone.py  0017_alter_bill_interval_alter_bill_is_discreet_and_more.py  0018_remove_billunregisteredparticipant_bill_and_more.py  0019_alter_billunregisteredparticipant_phone.py  0020_alter_billunregisteredparticipant_phone.py  0021_alter_billaction_status.py  0022_remove_bill_total_amount_paid_and_more.py  0023_alter_billtransaction_action.py  0024_remove_bill_next_charge_date.py  0025_alter_bill_uuid_alter_billaction_uuid_and_more.py  0026_alter_bill_interval.py  0027_alter_bill_first_charge_date.py  0028_alter_billtransaction_action.py  0029_billtransaction_transaction_type_billarrear.py  0030_billarrear_status.py  (+2 more)
api/bills/tasks/: actions.py  arrears.py  contributions.py  subscriptions.py
api/bills/utils/: actions.py  arrears.py  bills.py  contributions.py  fees.py  participants.py  validation.py
api/core/: __init__.py  celery.py  models.py  pagination.py  parsers.py  serializers.py  settings.py  urls.py  utils.py  views.py
api/core/utils/: currency.py  dates_and_time.py  decimals.py  dictionaries.py  files.py  images.py  lists.py  querysets.py  responses.py  strings.py  users.py
api/financials/: admin.py  apps.py  models.py  tasks.py  urls.py  utils.py
api/financials/api/: permissions.py  serializers.py  views.py  viewsets.py
api/financials/data/: banks.py  logos.py
api/financials/migrations/: 0001_initial.py  0002_alter_transferrecipient_bank_code.py  0002_alter_transferrecipient_user.py  0003_alter_transferrecipient_options_and_more.py  0003_paystacktransaction_financials__paystac_aebe4e_idx.py  0004_alter_paystackplan_created_and_more.py  0004_usercard_country_code.py  0005_alter_transferrecipient_options_and_more.py  0005_paystacktransfer_paying_user.py  0006_alter_transferrecipient_recipient_code_and_more.py  0006_paystacktransfer_reason.py  0007_paystackplan.py  0007_paystacktransfer_financials__paystac_0e4584_idx_and_more.py  0008_alter_paystacktransfer_transfer_outcome.py  0008_delete_paystackplan.py  0009_alter_paystacktransfer_reason.py  (+37 more)
api/flutterwave/: bank_requests.py  payment_requests.py  tokenized_charge_requests.py  transfer_beneficiary_requests.py
api/paystack/: bank.py  bank_requests.py  base.py  plan_requests.py  subscription_requests.py  subscriptions.py  transaction_requests.py  transactions.py  transfer_recipient.py  transfer_recipient_requests.py
(+402 files in other folders)
